# file-utils

./: Cargo.toml  README.md  generate_checksum.ps1
.old/: make_exe.ps1  make_installer.fail  make_installer.insta  make_installer.og2  make_installer.og3
bak/: README  archive.7z  config.txt  file-utils_installer.ps1  full_make.ps1  make_archive.ps1  make_installer.ps1
file-utils-i_package/: archive.7z  file-utils-i_installer.ps1  make_installer.ps1
file-utils_package/: UNWISE.bat  archive.7z  config.txt  file-utils_installer.bat  make_installer.og1  make_installer.ps1
src/: crypto.rs  file_operations.rs  file_utils.rs  main.rs  process_hunter.rs  secure_delete.old  secure_delete.rs  secure_wipe.rs
