[package]
name = "file-utils-i"
version = "0.4.0"
edition = "2021"
authors = ["claudefren peteyfren whisprer: tom@whispr.dev"]
description = "A secure file enc/decrypt & secure deletion tool"


[dependencies]
aes = "0.8"
aes-gcm = "0.10.3"
# Add "simple" feature to pbkdf2
anyhow = "1.0.75"
chacha20poly1305 = "0.10.1"
clap = { version = "4.4", features = ["derive"] }
console = "0.15.7"
ctr = "0.9"
dialoguer = "0.11.0"
directories = "5.0.1"
env_logger = "0.10.1"
hex = "0.4.3"
hmac = "0.12.1"
indicatif = "0.17.7"
log = "0.4.20"
pbkdf2 = { version = "0.12.2", features = ["simple"] }
rand = "0.8.5"
sha2 = "0.10.8"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
thiserror = "1.0.50"
walkdir = "2.4.0"
winapi = { version = "0.3", features = ["handleapi", "processthreadsapi", "winnt"] }
zeroize = "1.6.0"
